--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>p5.play Example</title>
+    <title>Clean p5 game projet by Spyman</title>
     <!-- link p5.js and its addons like p5.dom.js or p5.sound.js -->
     <script src="lib/p5.js" type="text/javascript"></script>
     <!-- link p5.play.js -->
     <script src="lib/p5.play.js" type="text/javascript"></script>
+    <!-- link p5.sound.js for sounds and musics -->
+    <script src="lib/p5.sound.js" type="text/javascript"></script>
+    <!-- link p5.dom.js to use DOM -->
+    <script src="lib/p5.dom.js" type="text/javascript"></script>
     <!-- link your javascript sketch -->
     <script src="animation_sprite_sheet.js" type="text/javascript"></script>
   </head>
   <body>
   </body>
 </html>
+
