--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="lib/p5.sound.js" type="text/javascript"></script>
     <!-- link p5.dom.js to use DOM -->
     <script src="lib/p5.dom.js" type="text/javascript"></script>
+    <!-- link p5.speech.js to use speech recognition -->
+    <script src="lib/p5.speech.js" type="text/javascript"></script>
     <!-- link your javascript sketch -->
     <script src="animation_sprite_sheet.js" type="text/javascript"></script>
   </head>
